---
source: compiler/plc_xml/src/xml_parser/control.rs
expression: ast
---
CompilationUnit {
    global_vars: [],
    units: [
        POU {
            name: "program_0",
            variable_blocks: [
                VariableBlock {
                    variables: [
                        Variable {
                            name: "x",
                            data_type: DataTypeReference {
                                referenced_type: "BOOL",
                            },
                            initializer: Some(
                                LiteralInteger {
                                    value: 0,
                                },
                            ),
                        },
                    ],
                    variable_block_type: Local,
                },
            ],
            pou_type: Program,
            return_type: None,
        },
    ],
    implementations: [
        Implementation {
            name: "program_0",
            type_name: "program_0",
            linkage: Internal,
            pou_type: Program,
            statements: [
                LabelStatement {
                    name: "lbl",
                },
                JumpStatement {
                    condition: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "x",
                            },
                        ),
                        base: None,
                    },
                    target: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "lbl",
                            },
                        ),
                        base: None,
                    },
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "x",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralBool {
                        value: false,
                    },
                },
            ],
            location: SourceLocation {
                span: None,
            },
            name_location: SourceLocation {
                span: None,
            },
            overriding: false,
            generic: false,
            access: None,
        },
    ],
    user_types: [],
    file_name: "<internal>",
}
